very little fix

--- a/templates/admin/admin-header.html
+++ b/templates/admin/admin-header.html
@@ -1,5 +1,5 @@
 {% macro admin_logo() %}
-    <img src="{{ url_for('static', filename='img/layer1.svg') }}" alt="logo">
+    <a href="/"><img src="{{ url_for('static', filename='img/layer1.svg') }}" alt="logo"></a>
 {% endmacro %}
 
 {% macro admin_nav() %}
