--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,9 @@
                 <i class="bi bi-cart4"></i>
             </li>
             <li class="nav__li">
+                <a href="/orders" class="logout nav__a">Заказы</a>
+            </li>
+            <li class="nav__li">
                 <a href="/logout" class="logout nav__a">Выйти</a>
             </li>
         </ul>
