--- a/templates/login.html
+++ b/templates/login.html
@@ -1,29 +1,34 @@
-{% extends "base_login.html" %}
+{% extends 'base_login.html' %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}"/>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}" />
 {% endblock %}
 
 {% block logo %}
-    <img src="{{ url_for('static', filename='img/logo.svg') }}" alt="logo">
+  <img src="{{ url_for('static', filename='img/logo.svg') }}" alt="logo" />
 {% endblock %}
 
 {% block content %}
-    <div class="main__form">
-        <h1>Вход</h1>
-        <form action="/login" method="post">
-            <div class="form-component">
-                <label for="login">Логин</label>
-                <input type="text" name="login" placeholder="Login" id="login"/>
-            </div>
-            <div class="form-component">
-                <label for="password">Пароль</label>
-                <input type="password" name="password" placeholder="....." id="password"/>
-            </div>
-            <div class="form-buttons">
-                <button class="button" type="submit">Войти</button>
-                <a class="button" href="/registration">Зарегестрироваться</a>
-            </div>
-        </form>
+  <div class="main__form">
+    <h1>Вход</h1>
+    <div class="messages">
+      {% for message in messages %}
+        <p>{{ message }}</p>
+      {% endfor %}
     </div>
+    <form action="/login" method="post">
+      <div class="form-component">
+        <label for="login">Логин</label>
+        <input type="text" name="login" placeholder="Login" id="login" />
+      </div>
+      <div class="form-component">
+        <label for="password">Пароль</label>
+        <input type="password" name="password" placeholder="....." id="password" />
+      </div>
+      <div class="form-buttons">
+        <button class="button" type="submit">Войти</button>
+        <a class="button" href="/registration">Зарегестрироваться</a>
+      </div>
+    </form>
+  </div>
 {% endblock %}
